# goit-ds-hw-02

./: README.md  database.db  main.py  pyproject.toml  seed.py  sql_requests.py
